# apcore-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.forge/: feature-manifest.md
.github/workflows/: ci.yml
docs/apcore-unified-client/: state.json  tech-design.md
docs/features/: client-discover-list.md  client-unit-tests.md  fix-decorator-bug.md  overview.md  typescript-apcore-client.md
docs/issues/: ISSUE_009.md  ISSUE_010.md  ISSUE_011.md  ISSUE_012.md  ISSUE_013.md  ISSUE_014.md  ISSUE_015.md  ISSUE_016.md  ISSUE_017.md  ISSUE_018.md  ISSUE_019.md  ISSUE_020.md  ISSUE_021.md  ISSUE_022.md  ISSUE_023.md  ISSUE_024.md
examples/: cancel_token.py  global_client.py  simple_client.py
examples/bindings/format_date/: format_date.binding.yaml  run.py
planning/: cleanup-2026-04-cross-repo-audit.md  cleanup-2026-04-final-summary.md  cleanup-2026-04-spec-pr-decision.md  cleanup-2026-04-sync-report.md  cleanup-2026-04.md  overview.md
planning/approval-system/: overview.md  plan.md  state.json
planning/approval-system/tasks/: approval-core.md  error-types.md  executor-integration.md  extension-point.md  integration-tests.md  public-exports.md
planning/features/: acl-system.md  core-executor.md  decorator-bindings.md  middleware-system.md  observability.md  registry-system.md  schema-system.md
planning/implementation/: overview.md
planning/implementation/acl-system/: overview.md  plan.md  state.json
planning/implementation/acl-system/tasks/: acl-core.md  acl-rule.md  conditional-rules.md  pattern-matching.md  yaml-loading.md
planning/implementation/core-executor/: overview.md  plan.md  state.json
planning/implementation/core-executor/tasks/: async-support.md  execution-pipeline.md  redaction.md  safety-checks.md  setup.md
planning/implementation/decorator-bindings/: overview.md  plan.md  state.json
planning/implementation/decorator-bindings/tasks/: binding-directory.md  binding-loader.md  function-module.md  module-decorator.md  schema-modes.md  type-inference.md
planning/implementation/middleware-system/: overview.md  plan.md  state.json
planning/implementation/middleware-system/tasks/: adapters.md  base.md  (+2 more)
planning/implementation/observability/: overview.md  plan.md  state.json
planning/implementation/registry-system/: overview.md  plan.md  state.json
planning/implementation/schema-system/: overview.md  plan.md  state.json
planning/sys-modules/: overview.md  plan.md  state.json
planning/sys-modules/tasks/: control-hotfix.md  control-reload.md  control-toggle.md  control-update-config.md  error-history-middleware.md  error-history.md  event-emitter.md  health-module.md  health-summary.md  manifest-full.md  manifest-module.md  platform-notify-middleware.md  spec-adjustments.md  streaming-protocol.md  subscribers.md  sys-modules-config.md  sys-modules-registration.md  usage-collector.md  usage-module.md  usage-summary.md  version-negotiation.md
scripts/: sync-fixtures.sh
src/apcore/: __init__.py  _docstrings.py  acl.py  acl_handlers.py  approval.py  async_task.py  bindings.py  builtin_steps.py  cancel.py  client.py  config.py  context.py  context_key.py  context_keys.py  decorator.py  error_formatter.py  errors.py  executor.py  extensions.py  module.py  pipeline.py  pipeline_config.py  trace_context.py  version.py
src/apcore/events/: __init__.py  emitter.py  subscribers.py
src/apcore/middleware/: __init__.py  adapters.py  base.py  error_history.py  logging.py  manager.py  platform_notify.py  retry.py
src/apcore/observability/: __init__.py  context_logger.py  error_history.py  metrics.py  tracing.py  usage.py
src/apcore/registry/: __init__.py  conflicts.py  dependencies.py  entry_point.py  metadata.py  registry.py  scanner.py  schema_export.py  types.py  version.py
src/apcore/schema/: exporter.py  loader.py  strict.py  validator.py
src/apcore/sys_modules/: __init__.py  control.py  health.py  manifest.py  registration.py  usage.py
src/apcore/utils/: __init__.py  call_chain.py  error_propagation.py  normalize.py  pattern.py  redaction.py
tests/: test_acl_audit.py  test_acl_conditions.py  test_annotations.py  test_approval.py  test_approval_executor.py  test_approval_integration.py  test_async_task.py  test_bindings.py  test_builtin_steps.py  test_call_chain.py  test_cancel.py  test_client.py  test_config.py  test_config_bus.py  test_config_discovery.py  test_conformance.py  test_context.py  test_context_key.py  test_context_keys.py  test_context_serialization.py  test_context_services.py  test_decorator.py  test_docstrings.py  test_error_code_registry.py  test_error_formatter.py  test_error_formatter_registry.py  test_error_history_middleware.py  test_error_propagation.py  test_errors.py  test_executor.py  test_executor_async.py  test_executor_pipeline.py  test_executor_stream.py  test_extensions.py  test_global_timeout.py  test_id_conflicts.py  test_integration_executor.py  test_logging_middleware.py  test_middleware.py  test_middleware_adapters.py  (+17 more)
tests/conformance/: __init__.py  test_conformance.py  test_conformance_suite.py
tests/conformance/fixtures/: acl_evaluation.json  call_chain.json  config_env.json  context_serialization.json  display_resolve.json  error_codes.json  normalize_id.json  pattern_matching.json  schema_validation.json  specificity.json  version_negotiation.json
tests/events/: test_emitter.py  test_subscribers.py
tests/examples/: test_example_modules.py
tests/integration/: test_e2e_flow.py  test_error_propagation.py  test_full_lifecycle.py
tests/observability/: test_context_logger.py  test_error_history.py  test_metrics.py  test_observability_package.py  test_tracing.py  test_usage.py
tests/registry/: test_dependencies.py  test_entry_point.py  test_integration.py  test_metadata.py  test_module_execute_and_internal_errors.py  test_registry.py  test_scanner.py  test_schema_export.py  test_version_negotiation.py
tests/schema/: test_annotations.py  test_exporter.py  test_strict.py
tests/sys_modules/: test_control.py  test_health.py  test_manifest.py  test_registration.py  test_usage.py
(+22 files in other folders)
