[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apcore"
version = "0.12.0"
description = "Schema-driven module development framework for AI-perceivable interfaces"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "aipartnerup", email = "tercel.yi@gmail.com"}
]
license = {text = "Apache-2.0"}
keywords = [
    "ai",
    "llm",
    "framework",
    "task-orchestration",
    "schema-driven",
    "pydantic",
    "middleware",
    "observability",
    "tracing",
    "metrics",
    "async",
    "access-control",
    "registry",
    "trace-context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://aipartnerup.com"
Documentation = "https://github.com/aipartnerup/apcore"
Repository = "https://github.com/aipartnerup/apcore-python"
Issues = "https://github.com/aipartnerup/apcore-python/issues"
Changelog = "https://github.com/aipartnerup/apcore-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
events = [
    "aiohttp>=3.9",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "aiohttp>=3.9",
    "apdev[dev]>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.apdev]
base_package = "apcore"
src_dir = "src"
