[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apcore"
version = "0.19.0"
description = "Schema-driven module standard for AI-perceivable interfaces"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "aiperceivable", email = "tercel.yi@gmail.com"}
]
license = {text = "Apache-2.0"}
keywords = [
    "ai",
    "llm",
    "framework",
    "task-orchestration",
    "schema-driven",
    "pydantic",
    "middleware",
    "observability",
    "tracing",
    "metrics",
    "async",
    "access-control",
    "registry",
    "trace-context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    # Upper bounds pin the major so a downstream major release (pydantic 3,
    # pyyaml 7, jsonschema 5) does not silently break installs. Raise the
    # upper bound deliberately after a compatibility check rather than
    # absorbing breakage from `pip install --upgrade`.
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "jsonschema>=4.21,<5",
]

[project.urls]
Homepage = "https://aiperceivable.com"
Documentation = "https://github.com/aiperceivable/apcore"
Repository = "https://github.com/aiperceivable/apcore-python"
Issues = "https://github.com/aiperceivable/apcore-python/issues"
Changelog = "https://github.com/aiperceivable/apcore-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
events = [
    "aiohttp>=3.9",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
    "mypy>=1.0",
    "apdev[dev]>=0.2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.apdev]
base_package = "apcore"
src_dir = "src"
